crates/jarl-core/src/lints/testthat/expect_no_match/snapshots/jarl_core__lints__testthat__expect_no_match__tests__no_fix_with_comments.snap
---
source: crates/jarl-core/src/lints/testthat/expect_no_match/mod.rs
expression: "get_fixed_text(vec![\"expect_false(grepl(# comment\\n'fun', 'Testing is fun'))\",],\n\"expect_no_match\", None,)"
---
OLD:
====
expect_false(grepl(# comment
'fun', 'Testing is fun'))
NEW:
====
expect_false(grepl(# comment
'fun', 'Testing is fun'))
